# Solvex-SDK

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
solvex/: __init__.py  client.py  exceptions.py  models.py
